# TranslationMediator

./: .replit  README.md  bot.py  config.py  handlers.py  keep_alive.py  launch.sh  pyproject.toml  requirements.txt  storage.py  translator.py  user_data.json  utils.py
attached_assets/: Pasted--telegram-ext-Application-ERROR-No-error-handlers-are-registered-logging-exception-Traceback-1741063034068.txt
