[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "googletrans>=4.0.2",
    "googletrans-py>=4.0.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=20.0",
    "telegram>=0.0.1",
]
